clusters/9ka/prowlarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prowlarr
  namespace: prowlarr
