clusters/9ka/prowlarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
  namespace: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/version: 1.6.3.36098
spec:
  serviceName: prowlarr
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: ghcr.io/hotio/prowlarr:release
        ports:
        - containerPort: 9696
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        startupProbe:
          httpGet:
            port: http
          timeoutSeconds: 5
          failureThreshold: 120
        readinessProbe:
          httpGet:
            port: http
          timeoutSeconds: 5
          failureThreshold: 10
        livenessProbe:
          httpGet:
            port: http
          failureThreshold: 3
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ ReadWriteOnce ]
      storageClassName: proxmox-zfs-nvme
      resources:
        requests:
          storage: 1Gi
