clusters/9ka/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  ports:
  - port: 80
    name: http
    targetPort: http
  selector:
    app.kubernetes.io/name: prowlarr
